--- a/src/scss/layouts/layout_000/_post-top.scss
+++ b/src/scss/layouts/layout_000/_post-top.scss
@@ -3,7 +3,7 @@
 }
 .slider-top {
   position: relative;
-  height: 800px;
+  height: 782px;
   padding: 0;
   padding-top: 70px;
   @include e(content-container) {
@@ -64,6 +64,18 @@
       top: 420px;
       right: 795px;
     }
+  }
+  @include e(link-info) {
+    position: absolute;
+    right: 47%;
+    bottom: 0;
+    color: $black;
+    font-size: 14px;
+    font-weight: $boldFontWeight;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
